# ntp-parser

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  ntp.rs
