[package]
description = "Parser for the NTP protocol"
license = "MIT/Apache-2.0"
keywords = ["NTP","time","protocol","parser","nom"]
homepage = "https://github.com/rusticata/ntp-parser"
repository = "https://github.com/rusticata/ntp-parser.git"
name = "ntp-parser"
version = "0.5.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "6.0"
nom-derive = "0.7"

[badges]
travis-ci = { repository = "rusticata/ntp-parser" }
