[package]
description = "Parser for the NTP protocol"
license = "MIT/Apache-2.0"
keywords = ["NTP","time","protocol","parser","nom"]
homepage = "https://github.com/rusticata/ntp-parser"
repository = "https://github.com/rusticata/ntp-parser.git"
name = "ntp-parser"
version = "0.6.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2018"
rust-version = "1.67.1"

[dependencies]
nom = "7.0"
nom-derive = "0.10"

[badges]
travis-ci = { repository = "rusticata/ntp-parser" }
